--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: activitypub
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: https://fedodo.org
 
 environment:
   sdk: '>=3.0.3 <4.0.0'
