--- a/.github/workflows/PrepareForPublish.yaml
+++ b/.github/workflows/PrepareForPublish.yaml
@@ -15,7 +15,11 @@ jobs:
       - name: Check if current version is incorrect
         run: |
 
-          echo "PUBSPEC_VERSION=$grep 'version:' pubspec.yaml | tail -n1 | awk '{ print $2}'" >> "$GITHUB_ENV"
+          version=$(grep 'version:' pubspec.yaml | tail -n1 | awk '{ print $2}')
+
+          echo $version
+
+          echo "PUBSPEC_VERSION=$version" >> "$GITHUB_ENV"
 
           echo "${{ env.PUBSPEC_VERSION }}"
 
