👷 Added automatic release creation

--- a/.github/workflows/PrepareForPublish.yaml
+++ b/.github/workflows/PrepareForPublish.yaml
@@ -34,8 +34,8 @@ jobs:
             echo "Tag ${TAG} does not exist"
           fi
 
-      # - uses: "marvinpinto/action-automatic-releases@latest"
-      #   with:
-      #     repo_token: "${{ secrets.GH_TOKEN }}"
-      #     automatic_release_tag: "${{ env.VERSION }}"
-      #     prerelease: false
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GH_TOKEN }}"
+          automatic_release_tag: "${{ env.PUBSPEC_VERSION }}"
+          prerelease: false
