✏️ Updated release name

--- a/.github/workflows/PrepareForPublish.yaml
+++ b/.github/workflows/PrepareForPublish.yaml
@@ -49,5 +49,5 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GH_TOKEN }}"
-          automatic_release_tag: "${{ env.PUBSPEC_VERSION }}"
+          automatic_release_tag: "v${{ env.PUBSPEC_VERSION }}"
           prerelease: false
