--- a/.github/workflows/PrepareForPublish.yaml
+++ b/.github/workflows/PrepareForPublish.yaml
@@ -46,6 +46,10 @@ jobs:
             commit-msg: 📝 Updated Changelog
             github-token: ${{ secrets.GITHUB_TOKEN }}
 
+  CreateTag:
+    runs-on: ubuntu-latest
+    needs: Prepare
+    steps:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GH_TOKEN }}"
