--- a/.github/workflows/PrepareForPublish.yaml
+++ b/.github/workflows/PrepareForPublish.yaml
@@ -75,3 +75,4 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: "${{ secrets.GH_TOKEN }}"
+          tags: true
