--- a/.github/workflows/PrepareForPublish.yaml
+++ b/.github/workflows/PrepareForPublish.yaml
@@ -74,5 +74,5 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: "${{ secrets.GH_TOKEN }}"
+          github_token: ${{ secrets.GH_TOKEN }}
           tags: true
