--- a/.github/workflows/PrepareForPublish.yaml
+++ b/.github/workflows/PrepareForPublish.yaml
@@ -76,3 +76,6 @@ jobs:
         with:
           github_token: ${{ secrets.GH_TOKEN }}
           tags: true
+
+      - name: Publish release
+        uses: ghalactic/github-release-from-tag@v4
