--- a/.github/workflows/PrepareForPublish.yaml
+++ b/.github/workflows/PrepareForPublish.yaml
@@ -71,8 +71,6 @@ jobs:
       - run: |
           git tag v${{ env.PUBSPEC_VERSION }}
 
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GH_TOKEN }}
-          tags: true
+          git remote set-url origin https://LNA-DEV:${{secrets.GH_TOKEN}}@github.com/Fedodo/Fedodo.Pub.ActivityPub.git
+
+          git push origin v${{ env.PUBSPEC_VERSION }}
