--- a/.github/workflows/BuildAndPublish.yaml
+++ b/.github/workflows/BuildAndPublish.yaml
@@ -1,4 +1,4 @@
-name: PrepareForPublish
+name: BuildAndPublish
 
 on:
   workflow_dispatch:
@@ -42,9 +42,9 @@ jobs:
       - name: Commit Changelog
         uses: test-room-7/action-update-file@v1
         with:
-            file-path: CHANGELOG.md
-            commit-msg: 📝 Updated Changelog
-            github-token: ${{ secrets.GITHUB_TOKEN }}
+          file-path: CHANGELOG.md
+          commit-msg: 📝 Updated Changelog
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
   CreateTag:
     runs-on: ubuntu-latest
@@ -85,8 +85,29 @@ jobs:
           draft: false
           prerelease: false
 
-  publish:
+  Publish:
     needs: CreateTag
-    permissions:
-      id-token: write
-    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - run: git pull origin main
+      
+      # Setup Dart SDK with JWT token
+      - uses: dart-lang/setup-dart@d6a63dab3335f427404425de0fbfed4686d93c4f
+
+      # Minimal package setup and dry run checks.
+      - name: Install dependencies
+        run: dart pub get
+        # working-directory: ${{ inputs.working-directory }}
+
+      - name: Publish - dry run
+        run: dart pub publish --dry-run
+        # working-directory: ${{ inputs.working-directory }}
+
+      # Publishing...
+      - name: Publish to pub.dev
+        run: dart pub publish -f
+        # working-directory: ${{ inputs.working-directory }}
