--- a/.github/workflows/BuildAndPublish.yaml
+++ b/.github/workflows/BuildAndPublish.yaml
@@ -88,13 +88,15 @@ jobs:
   Publish:
     needs: CreateTag
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # This is required for requesting the JWT
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
       - run: git pull origin main
-      
+
       # Setup Dart SDK with JWT token
       - uses: dart-lang/setup-dart@d6a63dab3335f427404425de0fbfed4686d93c4f
 
