--- a/.github/workflows/BuildAndPublish.yaml
+++ b/.github/workflows/BuildAndPublish.yaml
@@ -88,5 +88,5 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GH_TOKEN }}"
-          # automatic_release_tag: "v${{ env.PUBSPEC_VERSION }}"
+          automatic_release_tag: "v${{ env.PUBSPEC_VERSION }}"
           prerelease: false
